# bAIt

./: .gitignore  .gitmodules  CLAUDE.md  GETTING-STARTED.md  MIGRATION_GUIDE.md  MIGRATION_QUICK_REFERENCE.md  README.md  functionality_comparison_report.md
bait_base/: README.md  __init__.py  _version.py  cli.py  config.py  pyproject.toml  query_system.py
bait_base/MCP/: __init__.py
bait_base/agents/: __init__.py
bait_base/agents/framework/: __init__.py  agent_orchestrator.py  base_agent.py  query_processor.py
bait_base/agents/specialized/: __init__.py  container_manager.py  deployment_expert.py  documentation_agent.py  optimization_agent.py  retry_orchestrator.py  security_agent.py  troubleshooting_agent.py  tutorial_fixer.py  tutorial_parser.py  tutorial_rewriter.py  tutorial_test_agent.py
bait_base/analyzers/: __init__.py  base_analyzer.py  bluesky_analyzer.py  deployment_analyzer.py  ioc_analyzer.py  medm_analyzer.py  network_analyzer.py
bait_base/config/: tutorial_test_config.yaml  tutorial_test_config_updated.yaml  validation_rules.yaml
bait_base/docs/: submodule-scripts.md
bait_base/docs/deployment/: beamline-deployment-guide.md
bait_base/docs/guides/: deployment_management.rst  index.rst  quick_start.rst
bait_base/docs/integration/: claude-code-integration.md
bait_base/docs/operations/: standard-operating-procedures.md
bait_base/docs/usage-examples/: cli-examples.md  daily-workflows.md  troubleshooting-scenarios.md
bait_base/knowledge/: __init__.py
bait_base/visualization/: __init__.py
bait_deployments/8id-bits/: config.json
docs/: CLAUDE.md  TUTORIAL_AGENT.md  TUTORIAL_AGENT_FINDINGS.md  TUTORIAL_WORK_LOG.md  tst-exploration.md
docs/submodules/: ACCESS-REQUIREMENTS.md  SUBMODULES.md
scripts/: README.md  check-submodule-access.py  diagnose-submodule-issues.py  init-accessible-submodules.py  run_tutorial_agent.py
tutorial_workspace/: README.md  environment_info.txt  setup.py
tutorial_workspace/docs/: BITS_API_SETUP.md  BITS_COMPLIANCE_REVIEW.md  TUTORIAL_IMPROVEMENTS_SUMMARY.md
tutorial_workspace/scripts/: check_connectivity.py  explore_iocs.py  manage_demo_containers.py  setup_paths.sh  start_demo_iocs.sh  stop_demo_iocs.sh  test_tutorial_system.py  validate_setup.py
tutorial_workspace/src/my_beamline/: __init__.py  startup.py
tutorial_workspace/src/my_beamline/callbacks/: __init__.py
tutorial_workspace/src/my_beamline/configs/: devices.yml  iconfig.yml
tutorial_workspace/src/my_beamline/devices/: __init__.py
tutorial_workspace/src/my_beamline/plans/: __init__.py
tutorial_workspace/src/my_beamline/suspenders/: __init__.py
tutorial_workspace/src/my_beamline/utils/: __init__.py
